# flex-examples

./: CMakeLists.txt  german.l  test1.l
.github/: cmake-multi-platform.yml
.github/workflows/: cmake-multi-platform.yml
